Add multiple new ships to the site! <3

--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
             <span class="tag completed">Completed</span>
             <span class="tag nsfw">NSFW</span>
           </div>
-          <h3>Campus Love</h3>
-          <p>A study session turns into something more...</p>
-          <div class="rp-meta">Jan 24, 2022 – Feb 2024</div>
+          <h3>ash + brynna</h3>
+          <p>what if we went to the same university?</p>
+          <div class="rp-meta">Nov 13, 2021 – Feb 2024</div>
         </div>
       </a>
     </li>
@@ -272,15 +272,15 @@
   <h2 class="section-title">Royal</h2>
   <ul class="rp-list">
     <li>
-      <a href="royal-banquet.html" class="rp-card">
-        <img src="images/banquet.jpg" alt="Royal Banquet" class="rp-thumb" />
+      <a href="hunter_ria.html" class="rp-card">
+        <img src="images/banquet.jpg" alt="hunter + ria" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
           </div>
-          <h3>The Royal Banquet</h3>
-          <p>Political intrigue brews beneath the glittering chandeliers.</p>
-          <div class="rp-meta">Started: Nov 2024</div>
+          <h3>hunter + ria</h3>
+          <p>an undercover rebel and a prince entangled in a whirlwind of secrets during his royal highness' selection.</p>
+          <div class="rp-meta">Sept 30, 2020 – May 29, 2022</div>
         </div>
       </a>
     </li>
@@ -304,28 +304,41 @@
   <h2 class="section-title">Miscellaneous</h2>
   <ul class="rp-list">
     <li>
-      <a href="tavern.html" class="rp-card">
-        <img src="images/tavern.jpg" alt="The Tavern Meeting" class="rp-thumb" />
+      <a href="alex_simon.html" class="rp-card">
+        <img src="images/tavern.jpg" alt="Alexandria & Simon" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
           </div>
-          <h3>The Tavern Meeting</h3>
-          <p>A cozy night by the fire turns into an unexpected adventure.</p>
-          <div class="rp-meta">Jan 2022 – May 2022</div>
+          <h3>alexandria + simon</h3>
+          <p>a sudden supermodel turns an hotshot executive's life upside down when she becomes the face of his father's company.</p>
+          <div class="rp-meta">May 24, 2019 – Nov 28, 2021</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="forest.html" class="rp-card">
-        <img src="images/forest.jpg" alt="Whispers in the Forest" class="rp-thumb" />
+      <a href="talia_penn.html" class="rp-card">
+        <img src="images/forest.jpg" alt="Talia + Penn" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
           </div>
-          <h3>Whispers in the Forest</h3>
-          <p>Strange voices lure travelers deeper into the misty woods.</p>
-          <div class="rp-meta">Started: Jun 2025</div>
+          <h3>talia + penn</h3>
+          <p>Hollywood's retired IT boy trusts a young reporter with an exclusive, tell all interview discussing his deep never before revealed struggles in the spotlight.</p>
+          <div class="rp-meta">Sept 26 – Dec 21, 2022</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="dylan_dennis.html" class="rp-card">
+        <img src="images/forest.jpg" alt="Dylan + Dennis" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag ongoing">Ongoing</span>
+          </div>
+          <h3>dylan + dennis</h3>
+          <p>a world-renown modeling photographer enlists a beautiful young girl to help his reputation amid a messy divorce with his company's co-owner.</p>
+          <div class="rp-meta">Feb 20 – Oct 12, 2024</div>
         </div>
       </a>
     </li>
