--- a/brynna_ash.html
+++ b/brynna_ash.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>RP Chat Viewer with Profile Pics</title>
+<title>brynna + ash</title>
 <style>
   :root {
     --bg-color: #fff;
