add aidan + emilia <3

--- a/index.html
+++ b/index.html
@@ -278,23 +278,23 @@
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
           </div>
-          <h3>hunter + ria</h3>
+          <h3>hunter + adrianna</h3>
           <p>an undercover rebel and a prince entangled in a whirlwind of secrets during his royal highness' selection.</p>
           <div class="rp-meta">Sept 30, 2020 – May 29, 2022</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="forbidden-heir.html" class="rp-card">
-        <img src="images/heir.jpg" alt="The Forbidden Heir" class="rp-thumb" />
+      <a href="aidan_emilia.html" class="rp-card">
+        <img src="images/heir.jpg" alt="aidan + emilia" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag nsfw">NSFW</span>
             <span class="tag completed">Completed</span>
           </div>
-          <h3>The Forbidden Heir</h3>
-          <p>A romance that could topple the kingdom.</p>
-          <div class="rp-meta">Mar 2023 – Aug 2023</div>
+          <h3>aidan + emilia</h3>
+          <p>A romantic rivalry for the ages.</p>
+          <div class="rp-meta">May 29, 2022 – Mar 14, 2023</div>
         </div>
       </a>
     </li>
