add multiship from singular dm

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 <main>
   <!-- University Theme -->
-  <h2 class="section-title">University</h2>
+  <h2 class="section-title">High School/University</h2>
   <ul class="rp-list">
     <li>
       <a href="brynna_ash.html" class="rp-card">
@@ -254,15 +254,41 @@
       </a>
     </li>
     <li>
-      <a href="rp_chat_with_data.html" class="rp-card">
-        <img src="images/roommates.jpg" alt="Roommates" class="rp-thumb" />
+      <a href="brett_ryan.html" class="rp-card">
+        <img src="imgs/brett_ryan.png" alt="brett + ryan" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
           </div>
-          <h3>Roommates</h3>
-          <p>Living together isn’t always easy, but it’s never boring.</p>
-          <div class="rp-meta">Sep 2023 – Feb 2024</div>
+          <h3>brett + ryan</h3>
+          <p>being the new guy isn't always easy, but it’s never boring. what happens when he falls for the golden girl?</p>
+          <div class="rp-meta">Jul 3, 2023 – Feb 22, 2024</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="alia_patrick.html" class="rp-card">
+        <img src="imgs/alia_patrick.png" alt="alia + patrick" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>alia + patrick</h3>
+          <p>new girl attracts the attention of one half of a popular duo, leading to unexpected complications.</p>
+          <div class="rp-meta">Nov 4, 2018 – Feb 3, 2020</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="alex_rya.html" class="rp-card">
+        <img src="imgs/alex_rya.png" alt="alex + rya" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>alex + rya</h3>
+          <p>you can't fight destiny. no one can. they weren't supposed to end up together, but their bond was too strong to be broken.</p>
+          <div class="rp-meta">Mar 19, 2018 – Oct 15, 2018</div>
         </div>
       </a>
     </li>
@@ -273,7 +299,7 @@
   <ul class="rp-list">
     <li>
       <a href="hunter_ria.html" class="rp-card">
-        <img src="images/banquet.jpg" alt="hunter + ria" class="rp-thumb" />
+        <img src="imgs/ria.jpg" alt="hunter + ria" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
