add kieran + iris <3

--- a/index.html
+++ b/index.html
@@ -292,6 +292,19 @@
         </div>
       </a>
     </li>
+      <li>
+      <a href="kieran_iris.html" class="rp-card">
+        <img src="imgs/kieran_iris.jpg" alt="kieran + iris" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>kieran + iris</h3>
+          <p>the ultimate new girl.</p>
+          <div class="rp-meta">Jun 17, 2021 – Dec 26, 2021</div>
+        </div>
+      </a>
+    </li>
   </ul>
 
   <!-- Royal Theme -->
