rename ship (alex/ria -> alexandria) to avoid confusion

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   <ul class="rp-list">
     <li>
       <a href="hunter_ria.html" class="rp-card">
-        <img src="imgs/ria.jpg" alt="hunter + ria" class="rp-thumb" />
+        <img src="imgs/hunter_ria.jpg" alt="hunter + ria" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
@@ -343,8 +343,8 @@
   <h2 class="section-title">Miscellaneous</h2>
   <ul class="rp-list">
     <li>
-      <a href="alex_simon.html" class="rp-card">
-        <img src="images/tavern.jpg" alt="Alexandria & Simon" class="rp-thumb" />
+      <a href="alexandria_simon.html" class="rp-card">
+        <img src="imgs/alexandria.jpg" alt="Alexandria & Simon" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
