add jordan x natalia + more ship photos! <3

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
   .tag.nsfw { background: #f8e4e4; color: #8a2b2b; border-color: #f0cccc; }
   body.dark .tag.nsfw { background: #5c2b2b; color: #f2b8b8; border-color: #793939; }
 
+  .tag.supernatural { background: #f8e4e4; color: #8a2b2b; border-color: #f0cccc; }
+  body.dark .tag.supernatural { background: #5c2b2b; color: #f2b8b8; border-color: #793939; }
+
   .tag.ongoing { background: #e4f1ec; color: #285e4b; border-color: #cce0d7; }
   body.dark .tag.ongoing { background: #1b3a2b; color: #a0d3b1; border-color: #23532f; }
 
@@ -241,7 +244,7 @@
   <ul class="rp-list">
     <li>
       <a href="brynna_ash.html" class="rp-card">
-        <img src="imgs/nikandscar.jpg" alt="Campus Love" class="rp-thumb" />
+        <img src="imgs/nikandscar.pg" alt="Campus Love" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
@@ -268,7 +271,7 @@
     </li>
     <li>
       <a href="alia_patrick.html" class="rp-card">
-        <img src="imgs/alia_patrick.png" alt="alia + patrick" class="rp-thumb" />
+        <img src="imgs/alia_patrick.jpg" alt="alia + patrick" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
@@ -281,10 +284,10 @@
     </li>
     <li>
       <a href="alex_rya.html" class="rp-card">
-        <img src="imgs/alex_rya.png" alt="alex + rya" class="rp-thumb" />
+        <img src="imgs/alex_rya.jpg" alt="alex + rya" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
-            <span class="tag completed">Completed</span>
+            <span class="tag supernatural">supernatural</span>
           </div>
           <h3>alex + rya</h3>
           <p>you can't fight destiny. no one can. they weren't supposed to end up together, but their bond was too strong to be broken.</p>
@@ -292,7 +295,7 @@
         </div>
       </a>
     </li>
-      <li>
+    <li>
       <a href="kieran_iris.html" class="rp-card">
         <img src="imgs/kieran_iris.jpg" alt="kieran + iris" class="rp-thumb" />
         <div class="rp-content">
@@ -305,6 +308,19 @@
         </div>
       </a>
     </li>
+    <li>
+      <a href="jordan_natalia.html" class="rp-card">
+        <img src="imgs/nikandscar.jpg" alt="jordan + natalia" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>jordan + natalia</h3>
+          <p>two frenemies hide their feelings for each other just as they hide their fuck sessions from their friends.</p>
+          <div class="rp-meta">Jul 17, 2024 – Jul 31, 2024</div>
+        </div>
+      </a>
+    </li>
   </ul>
 
   <!-- Royal Theme -->
@@ -312,7 +328,7 @@
   <ul class="rp-list">
     <li>
       <a href="hunter_ria.html" class="rp-card">
-        <img src="imgs/hunter_ria.jpg" alt="hunter + ria" class="rp-thumb" />
+        <img src="imgs/hunter_adrianna.jpg" alt="hunter + ria" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
@@ -357,7 +373,7 @@
     </li>
     <li>
       <a href="talia_penn.html" class="rp-card">
-        <img src="images/forest.jpg" alt="Talia + Penn" class="rp-thumb" />
+        <img src="imgs/talia_penn.png" alt="Talia + Penn" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
