add ash/immy, erin/seb, + cece/harvey (pending) ! all to be reviewed still :) <3

--- a/index.html
+++ b/index.html
@@ -321,6 +321,19 @@
         </div>
       </a>
     </li>
+    <li>
+      <a href="imogen_ash.html" class="rp-card">
+        <img src="imgs/nikandscar.jg" alt="imogen + ash" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>ash + immy</h3>
+          <p>lovers reunite as roommates after a whirlwind summer romance. -chat still to be reviewed-</p>
+          <div class="rp-meta">Feb 16, 2016 – Feb 5, 2017</div>
+        </div>
+      </a>
+    </li>
   </ul>
 
   <!-- Royal Theme -->
@@ -350,6 +363,20 @@
           <h3>aidan + emilia</h3>
           <p>A romantic rivalry for the ages.</p>
           <div class="rp-meta">May 29, 2022 – Mar 14, 2023</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="harvey_ceceilia.html" class="rp-card">
+        <img src="images/heir.jpg" alt="harvey + cece" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag nsfw">NSFW</span>
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>harvey + cece</h3>
+          <p>pending re-read lol, p.s. not finished importing... remaining in mess3 lol</p>
+          <div class="rp-meta">Sept 22, 2017 – TBD</div>
         </div>
       </a>
     </li>
@@ -394,6 +421,19 @@
           <h3>dylan + dennis</h3>
           <p>a world-renown modeling photographer enlists a beautiful young girl to help his reputation amid a messy divorce with his company's co-owner.</p>
           <div class="rp-meta">Feb 20 – Oct 12, 2024</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="erin_sebastian.html" class="rp-card">
+        <img src="imgs/nikandscar.jg" alt="erin + sebastian" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>erin + sebastian</h3>
+          <p>pending reread lol -chat still to be reviewed-</p>
+          <div class="rp-meta">Feb 11, 2017 – Sept 11, 2017</div>
         </div>
       </a>
     </li>
