clean up + reorg :)

--- a/chats/alia_patrick.html
+++ b/chats/alia_patrick.html
@@ -23773,7 +23773,7 @@ toggleBtn.addEventListener('click', () => {
 // Back button logic
 const backBtn = document.getElementById('backButton');
 backBtn.addEventListener('click', () => {
-  window.location.href = 'index.html'; // Change if your archive page filename is different
+  window.location.href = '../index.html'; // Change if your archive page filename is different
 });
 </script>
 </body>
