--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <h2 class="section-title">High School/University</h2>
   <ul class="rp-list">
     <li>
-      <a href="brynna_ash.html" class="rp-card">
+      <a href="chats/brynna_ash.html" class="rp-card">
         <img src="imgs/nikandscar.pg" alt="Campus Love" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -257,7 +257,7 @@
       </a>
     </li>
     <li>
-      <a href="brett_ryan.html" class="rp-card">
+      <a href="chats/brett_ryan.html" class="rp-card">
         <img src="imgs/brett_ryan.png" alt="brett + ryan" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -270,7 +270,7 @@
       </a>
     </li>
     <li>
-      <a href="alia_patrick.html" class="rp-card">
+      <a href="chats/alia_patrick.html" class="rp-card">
         <img src="imgs/alia_patrick.jpg" alt="alia + patrick" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -283,7 +283,7 @@
       </a>
     </li>
     <li>
-      <a href="alex_rya.html" class="rp-card">
+      <a href="chats/alex_rya.html" class="rp-card">
         <img src="imgs/alex_rya.jpg" alt="alex + rya" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -296,7 +296,7 @@
       </a>
     </li>
     <li>
-      <a href="kieran_iris.html" class="rp-card">
+      <a href="chats/kieran_iris.html" class="rp-card">
         <img src="imgs/kieran_iris.jpg" alt="kieran + iris" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -309,7 +309,7 @@
       </a>
     </li>
     <li>
-      <a href="jordan_natalia.html" class="rp-card">
+      <a href="chats/jordan_natalia.html" class="rp-card">
         <img src="imgs/nikandscar.jpg" alt="jordan + natalia" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -322,7 +322,7 @@
       </a>
     </li>
     <li>
-      <a href="imogen_ash.html" class="rp-card">
+      <a href="chats/imogen_ash.html" class="rp-card">
         <img src="imgs/nikandscar.jg" alt="imogen + ash" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -340,7 +340,7 @@
   <h2 class="section-title">Royal</h2>
   <ul class="rp-list">
     <li>
-      <a href="hunter_ria.html" class="rp-card">
+      <a href="chats/hunter_ria.html" class="rp-card">
         <img src="imgs/hunter_adrianna.jpg" alt="hunter + ria" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -353,7 +353,7 @@
       </a>
     </li>
     <li>
-      <a href="aidan_emilia.html" class="rp-card">
+      <a href="chats/aidan_emilia.html" class="rp-card">
         <img src="images/heir.jpg" alt="aidan + emilia" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -367,7 +367,7 @@
       </a>
     </li>
     <li>
-      <a href="harvey_ceceilia.html" class="rp-card">
+      <a href="chats/harvey_ceceilia.html" class="rp-card">
         <img src="images/heir.jpg" alt="harvey + cece" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -386,7 +386,7 @@
   <h2 class="section-title">Miscellaneous</h2>
   <ul class="rp-list">
     <li>
-      <a href="alexandria_simon.html" class="rp-card">
+      <a href="chats/alexandria_simon.html" class="rp-card">
         <img src="imgs/alexandria.jpg" alt="Alexandria & Simon" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -399,7 +399,7 @@
       </a>
     </li>
     <li>
-      <a href="talia_penn.html" class="rp-card">
+      <a href="chats/talia_penn.html" class="rp-card">
         <img src="imgs/talia_penn.png" alt="Talia + Penn" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -412,7 +412,7 @@
       </a>
     </li>
     <li>
-      <a href="dylan_dennis.html" class="rp-card">
+      <a href="chats/dylan_dennis.html" class="rp-card">
         <img src="images/forest.jpg" alt="Dylan + Dennis" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
@@ -425,7 +425,7 @@
       </a>
     </li>
     <li>
-      <a href="erin_sebastian.html" class="rp-card">
+      <a href="chats/erin_sebastian.html" class="rp-card">
         <img src="imgs/nikandscar.jg" alt="erin + sebastian" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
