--- a/chats/brett_ryan.html
+++ b/chats/brett_ryan.html
@@ -11928,7 +11928,7 @@ toggleBtn.addEventListener('click', () => {
 // Back button logic
 const backBtn = document.getElementById('backButton');
 backBtn.addEventListener('click', () => {
-  window.location.href = 'index.html'; // Change if your archive page filename is different
+  window.location.href = '../index.html'; // Change if your archive page filename is different
 });
 </script>
 </body>
