--- a/chats/hunter_ria.html
+++ b/chats/hunter_ria.html
@@ -16289,7 +16289,7 @@ toggleBtn.addEventListener('click', () => {
 // Back button logic
 const backBtn = document.getElementById('backButton');
 backBtn.addEventListener('click', () => {
-  window.location.href = 'index.html'; // Change if your archive page filename is different
+  window.location.href = '../index.html'; // Change if your archive page filename is different
 });
 </script>
 </body>
