--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>RP Archive</title>
+<link rel="icon" href="../imgs/heart.png" type="image/png">
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap');
 
@@ -244,7 +245,7 @@
   <ul class="rp-list">
     <li>
       <a href="chats/brynna_ash.html" class="rp-card">
-        <img src="imgs/nikandscar.pg" alt="Campus Love" class="rp-thumb" />
+        <img src="imgs/bry_ash.jpg" alt="Campus Love" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
@@ -323,7 +324,7 @@
     </li>
     <li>
       <a href="chats/imogen_ash.html" class="rp-card">
-        <img src="imgs/nikandscar.jg" alt="imogen + ash" class="rp-thumb" />
+        <img src="imgs/ash_immy.png" alt="imogen + ash" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
@@ -354,7 +355,7 @@
     </li>
     <li>
       <a href="chats/aidan_emilia.html" class="rp-card">
-        <img src="images/heir.jpg" alt="aidan + emilia" class="rp-thumb" />
+        <img src="imgs/aidan_emilia.jpg" alt="aidan + emilia" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag nsfw">NSFW</span>
@@ -413,7 +414,7 @@
     </li>
     <li>
       <a href="chats/dylan_dennis.html" class="rp-card">
-        <img src="images/forest.jpg" alt="Dylan + Dennis" class="rp-thumb" />
+        <img src="imgs/dylan_dennis.jpg" alt="Dylan + Dennis" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag ongoing">Ongoing</span>
@@ -426,13 +427,13 @@
     </li>
     <li>
       <a href="chats/erin_sebastian.html" class="rp-card">
-        <img src="imgs/nikandscar.jg" alt="erin + sebastian" class="rp-thumb" />
+        <img src="imgs/erin_seb.png" alt="erin + sebastian" class="rp-thumb" />
         <div class="rp-content">
           <div class="tags">
             <span class="tag completed">Completed</span>
           </div>
           <h3>erin + sebastian</h3>
-          <p>pending reread lol -chat still to be reviewed-</p>
+          <p>america's sweetheart is in danger and her only hope is her father's new bodyguard.</p>
           <div class="rp-meta">Feb 11, 2017 – Sept 11, 2017</div>
         </div>
       </a>
