add multiple ships from og dm + clean up

--- a/index.html
+++ b/index.html
@@ -335,6 +335,60 @@
         </div>
       </a>
     </li>
+    <li>
+      <a href="chats/brandon_alaïa.html" class="rp-card">
+        <img src="imgs/bry_ash.jpg" alt="brandon + alaïa" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+            <span class="tag nsfw">NSFW</span>
+          </div>
+          <h3>brandon + alaïa</h3>
+          <p>enemies to lovers? lol, gotta read this before i can come up with a good summary</p>
+          <div class="rp-meta">Jan 3, 2019 – May 24, 2019</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/kyla_tyrone.html" class="rp-card">
+        <img src="imgs/kyla_tyrone.jpg" alt="kyla + tyrone" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+            <span class="tag nsfw">NSFW</span>
+          </div>
+          <h3>kyla + tyrone</h3>
+          <p>mr. popular + ms. perfect can't stand each other, but what happens when they're forced to spend the rest of their lives together in holy matrimony?</p>
+          <div class="rp-meta">Aug 12, 2019 – Dec 14, 2019</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/kaiya_carter.html" class="rp-card">
+        <img src="imgs/kaiya_carter.jpg" alt="kaiya + carter" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag supernatural">supernatural</span>
+          </div>
+          <h3>kaiya + carter</h3>
+          <p>two childhood friends navigate the complexities of love and friendship as they grow up together, seeing one color at a time.</p>
+          <div class="rp-meta">Feb 7, 2020 – Mar 10, 2020</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/tyrone_lila.html" class="rp-card">
+        <img src="imgs/tyrone_lila.jpg" alt="tyrone + lila" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag supernatural">supernatural</span>
+          </div>
+          <h3>tyrone + lila</h3>
+          <p>a hot, young professor catches the eye of the university's most-eligible bachelorette.</p>
+          <div class="rp-meta">Sept 24, 2021 – Jan 24, 2022</div>
+        </div>
+      </a>
+    </li>
   </ul>
 
   <!-- Royal Theme -->
@@ -377,7 +431,7 @@
           </div>
           <h3>harvey + cece</h3>
           <p>pending re-read lol, p.s. not finished importing... remaining in mess3 lol</p>
-          <div class="rp-meta">Sept 22, 2017 – TBD</div>
+          <div class="rp-meta">Sept 22, 2017 – June 21, 2018</div>
         </div>
       </a>
     </li>
@@ -435,6 +489,58 @@
           <h3>erin + sebastian</h3>
           <p>america's sweetheart is in danger and her only hope is her father's new bodyguard.</p>
           <div class="rp-meta">Feb 11, 2017 – Sept 11, 2017</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/marcus_asya.html" class="rp-card">
+        <img src="imgs/marcus_asya.png" alt="marcus + asya" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>marcus + asya</h3>
+          <p>a passionate romance between a man and the ghost of his former lover.</p>
+          <div class="rp-meta">Jun 21, 2018 – Jul 19, 2018</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/james_aly.html" class="rp-card">
+        <img src="imgs/james_aly.png" alt="james + aly" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>james + aly</h3>
+          <p>a one night stand reunites after she turns out to be son's kindergarten teacher.</p>
+          <div class="rp-meta">Aug 18, 2018 – Nov 17, 2018</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/whisper_jj.html" class="rp-card">
+        <img src="imgs/whisper_jj.png" alt="whisper + jj" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>whisper + jj</h3>
+          <p>dreams come true when a girl gets way more than she paid for at a meet n greet with some of her favorite youtubers.</p>
+          <div class="rp-meta">Dec 18, 2019 – Jan 15, 2020</div>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="chats/isabella_simon.html" class="rp-card">
+        <img src="imgs/isabella_simon.jpg" alt="isabella + simon" class="rp-thumb" />
+        <div class="rp-content">
+          <div class="tags">
+            <span class="tag completed">Completed</span>
+          </div>
+          <h3>isabella + simon</h3>
+          <p>on their wedding day, their sister takes the newlyweds on a journey through their love after gifting them a scrapbook filled with all their beautiful memories over the years.</p>
+          <div class="rp-meta">May 6, 2020 – Feb 21, 2021</div>
         </div>
       </a>
     </li>
